fix grid alignment

--- a/css/main.css
+++ b/css/main.css
@@ -359,4 +359,25 @@ people that prefer not to see them */
 .results button {
   margin-top: 2.125rem;
 }
+
+.results section {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr 2fr;
+}
+
+.results section h2 {
+  grid-row: 1;
+}
+
+.results section p {
+  grid-row: 2;
+}
+
+.results section .dollar {
+  grid-column: 2/3;
+  grid-row: 1 / span 2;
+  line-height: 1;
+}
 /*# sourceMappingURL=main.css.map */
